--- a/PersonneGitLibrary/PersonneGitLibrary.csproj
+++ b/PersonneGitLibrary/PersonneGitLibrary.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Personne.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Salarie.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
