--- a/PersonneGitLibrary/PersonneGitLibrary.csproj
+++ b/PersonneGitLibrary/PersonneGitLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commercial.cs" />
     <Compile Include="Personne.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Salarie.cs" />
